<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/floor_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_floor_5" />

        <Button
            android:id="@+id/floor_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_floor_4" />

        <Button
            android:id="@+id/floor_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_floor_3" />

        <Button
            android:id="@+id/floor_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_floor_2" />

        <Button
            android:id="@+id/floor_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_floor_1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>